--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/pages/index.css">
   <title>Mesto</title>
 </head>
-<body>
+<body class="root">
+  <div class="page">
+    <header class="header">
+       <img class="header__logo" src="./images/logo-mesto_color_white.svg" alt="логотип место россия">
+    </header>
+    <main class="main">
+      <section class="profile">
+        <img class="profile__avatar" src="/images/avatar_jack_iv_kusto.jpg" alt="Аватарка пользователя">
+        <div class="profile__user-info">
+          <h1 class="profile__user-name">Жак-Ив Кусто</h1>
+          <p class="profile__user-profession">Исследователь океана</p>
+          <button class="profile__button"></button>
+        </div>
 
+      </section>
+      <section class="cards">
+        <ul class="cards__list">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/elbrus.jpg" alt="гора Эльбрус">
+            <h2 class="cards__title">Гора Эльбрус</h2>
+            <div class="cards__like"></div>
+          </li>
+        </ul>
+
+
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="footer__copyright" lang="en">&copy; 2022. Mesto Russia</p>
+    </footer>
+  </div>
 </body>
 </html>
