--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/elbrus.jpg" alt="горы Домбая">
+            <img class="cards__image" src="./images/dombai.jpg" alt="горы Домбая">
             <div class="cards_description">
               <h2 class="cards__title">Домбай</h2>
               <div class="cards__like"></div>
@@ -61,7 +61,7 @@
             </div>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/elbrus.jpg" alt="горы Домбая">
+            <img class="cards__image" src="./images/dombai.jpg" alt="горы Домбая">
             <div class="cards_description">
               <h2 class="cards__title">Домбай</h2>
               <div class="cards__like"></div>
