test: question about padding in card

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
         <ul class="cards__list">
           <li class="cards__item">
             <img class="cards__image" src="./images/elbrus.jpg" alt="гора Эльбрус">
-            <h2 class="cards__title">Гора Эльбрус</h2>
-            <div class="cards__like"></div>
+            <div class="cards__description">
+              <h2 class="cards__title">Гора Эльбрус</h2>
+              <div class="cards__like"></div>
+
+            </div>
           </li>
         </ul>
 
