feat: finish page styles

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     <footer class="footer">
       <p class="footer__copyright" lang="en">&copy; 2022. Mesto Russia</p>
     </footer>
+
+    </div>
   </div>
 </body>
 </html>
