--- a/index.html
+++ b/index.html
@@ -75,8 +75,17 @@
     <footer class="footer">
       <p class="footer__copyright" lang="en">&copy; 2022. Mesto Russia</p>
     </footer>
-
+    <dialog class="popup">
+      <button class="popup_close-btn"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form" method="dialog">
+        <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
+        <input class="popup__occupation" type="text" placeholder="Исследователь океана">
+        <button class="popup__submit-btn" type="submit">Сохранить</button>
+      </form>
+    </dialog>
     </div>
   </div>
+  <script src="./script.js"></script>
 </body>
 </html>
