--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Mesto</title>
 </head>
 <body class="root">
@@ -14,11 +14,11 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__avatar" src="/images/avatar_jack_iv_kusto.jpg" alt="Аватарка пользователя">
+        <img class="profile__avatar" src="./images/avatar_jack_iv_kusto.jpg" alt="Аватарка пользователя">
         <div class="profile__user-info">
           <h1 class="profile__user-name">Жак-Ив Кусто</h1>
           <button class="profile__edit-btn"></button>
-          <p class="profile__user-profession">Исследователь океана</p>
+          <p class="profile__user-occupation">Исследователь океана</p>
         </div>
         <button class="profile__btn"></button>
 
@@ -73,17 +73,18 @@
     <footer class="footer">
       <p class="footer__copyright" lang="en">&copy; 2022. Mesto Russia</p>
     </footer>
-    <dialog class="popup">
-      <button class="popup_close-btn"></button>
-      <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form" method="dialog">
-        <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
-        <input class="popup__occupation" type="text" placeholder="Исследователь океана">
-        <button class="popup__submit-btn" type="submit">Сохранить</button>
-      </form>
-    </dialog>
+    <div class="popup">
+      <div class="popup__window">
+        <button class="popup_close-btn"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__form" method="dialog">
+          <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
+          <input class="popup__occupation" type="text" placeholder="Исследователь океана">
+          <button class="popup__submit-btn" type="submit">Сохранить</button>
+        </form>
+      </div>
     </div>
   </div>
-  <script src="./script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
