--- a/index.html
+++ b/index.html
@@ -27,42 +27,42 @@
         <ul class="cards__list">
           <li class="cards__item">
             <img class="cards__image" src="./images/karachaevsk.jpg" alt="Старинный монастырь в Карачаевске">
-            <div class="cards_description">
+            <div class="cards__description">
               <h2 class="cards__title">Карачаевск</h2>
               <div class="cards__like"></div>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/elbrus.jpg" alt="гора Эльбрус">
-            <div class="cards_description">
+            <div class="cards__description">
               <h2 class="cards__title">Гора Эльбрус</h2>
               <div class="cards__like"></div>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/dombai.jpg" alt="горы Домбая">
-            <div class="cards_description">
+            <div class="cards__description">
               <h2 class="cards__title">Домбай</h2>
               <div class="cards__like"></div>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/karachaevsk.jpg" alt="Старинный монастырь в Карачаевске">
-            <div class="cards_description">
+            <div class="cards__description">
               <h2 class="cards__title">Карачаевск</h2>
               <div class="cards__like"></div>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/elbrus.jpg" alt="гора Эльбрус">
-            <div class="cards_description">
+            <div class="cards__description">
               <h2 class="cards__title">Гора Эльбрус</h2>
               <div class="cards__like"></div>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/dombai.jpg" alt="горы Домбая">
-            <div class="cards_description">
+            <div class="cards__description">
               <h2 class="cards__title">Домбай</h2>
               <div class="cards__like"></div>
             </div>
@@ -75,7 +75,7 @@
     </footer>
     <div class="popup">
       <div class="popup__window">
-        <button class="popup_close-btn"></button>
+        <button class="popup__close-btn"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" method="dialog">
           <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
@@ -85,6 +85,6 @@
       </div>
     </div>
   </div>
-  <script src="./js/script.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
