fix: add default fonts, change popup positioning, button type button

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img class="profile__avatar" src="./images/avatar_jack_iv_kusto.jpg" alt="Аватарка пользователя">
         <div class="profile__user-info">
           <h1 class="profile__user-name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-btn"></button>
+          <button class="profile__edit-btn" type="button"></button>
           <p class="profile__user-occupation">Исследователь океана</p>
         </div>
-        <button class="profile__btn"></button>
+        <button class="profile__btn" type="button"></button>
 
       </section>
       <section class="cards">
@@ -75,7 +75,7 @@
     </footer>
     <div class="popup">
       <div class="popup__window">
-        <button class="popup__close-btn"></button>
+        <button class="popup__close-btn" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" method="dialog">
           <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
