--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img class="profile__avatar" src="./images/avatar_jack_iv_kusto.jpg" alt="Аватарка пользователя">
         <div class="profile__user-info">
           <h1 class="profile__user-name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-btn" type="button"></button>
+          <button class="profile__edit-btn" type="button" aria-label="Редактировать профиль"></button>
           <p class="profile__user-occupation">Исследователь океана</p>
         </div>
-        <button class="profile__btn" type="button"></button>
+        <button class="profile__btn" type="button" aria-label="Добавить изображение"></button>
 
       </section>
       <section class="cards">
@@ -29,42 +29,42 @@
             <img class="cards__image" src="./images/karachaevsk.jpg" alt="Старинный монастырь в Карачаевске">
             <div class="cards__description">
               <h2 class="cards__title">Карачаевск</h2>
-              <div class="cards__like"></div>
+              <button class="cards__like" aria-label="Лайкнуть фото" type="button"></button>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/elbrus.jpg" alt="гора Эльбрус">
             <div class="cards__description">
               <h2 class="cards__title">Гора Эльбрус</h2>
-              <div class="cards__like"></div>
+              <button class="cards__like" aria-label="Лайкнуть фото" type="button"></button>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/dombai.jpg" alt="горы Домбая">
             <div class="cards__description">
               <h2 class="cards__title">Домбай</h2>
-              <div class="cards__like"></div>
+              <button class="cards__like" aria-label="Лайкнуть фото" type="button"></button>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/karachaevsk.jpg" alt="Старинный монастырь в Карачаевске">
             <div class="cards__description">
               <h2 class="cards__title">Карачаевск</h2>
-              <div class="cards__like"></div>
+              <button class="cards__like" aria-label="Лайкнуть фото" type="button"></button>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/elbrus.jpg" alt="гора Эльбрус">
             <div class="cards__description">
               <h2 class="cards__title">Гора Эльбрус</h2>
-              <div class="cards__like"></div>
+              <button class="cards__like" aria-label="Лайкнуть фото" type="button"></button>
             </div>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/dombai.jpg" alt="горы Домбая">
             <div class="cards__description">
               <h2 class="cards__title">Домбай</h2>
-              <div class="cards__like"></div>
+              <button class="cards__like" aria-label="Лайкнуть фото" type="button"></button>
             </div>
           </li>
         </ul>
@@ -75,12 +75,12 @@
     </footer>
     <div class="popup">
       <div class="popup__window">
-        <button class="popup__close-btn" type="button"></button>
+        <button class="popup__close-btn" type="button" aria-label="Закрыть попап"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" method="dialog">
-          <input class="popup__name" type="text" placeholder="Жак-Ив Кусто">
-          <input class="popup__occupation" type="text" placeholder="Исследователь океана">
-          <button class="popup__submit-btn" type="submit">Сохранить</button>
+        <form class="popup__form" name="editProfilePopupForm" method="POST">
+          <input class="popup__input popup__name" id="popupName" name="name" type="text" placeholder="Имя">
+          <input class="popup__input" id="popupOccupation" name="occupation" type="text" placeholder="О себе">
+          <button class="popup__submit-btn" type="submit" aria-label="Сохранить изменения">Сохранить</button>
         </form>
       </div>
     </div>
