--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <button class="popup__close-btn" type="button" aria-label="Закрыть попап"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="editProfilePopupForm" method="POST">
-          <input class="popup__input popup__name" id="popupName" name="name" type="text" placeholder="Имя">
+          <input class="popup__input" id="popupName" name="name" type="text" placeholder="Имя">
           <input class="popup__input" id="popupOccupation" name="occupation" type="text" placeholder="О себе">
           <button class="popup__submit-btn" type="submit" aria-label="Сохранить изменения">Сохранить</button>
         </form>
