--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <footer class="footer">
         <p class="footer__copyright" lang="en">&copy; 2022. Mesto Russia</p>
       </footer>
-      <div class="popup">
+      <div class="popup popup_type_profile">
         <div class="popup__window">
           <button
             class="popup__close-btn"
