--- a/index.html
+++ b/index.html
@@ -147,15 +147,13 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__form" name="editProfilePopupForm" method="POST">
             <input
-              class="popup__input"
-              id="popupName"
+              class="popup__input popup__input_type_name"
               name="name"
               type="text"
               placeholder="Имя"
             />
             <input
-              class="popup__input"
-              id="popupOccupation"
+              class="popup__input popup__input_type_occupation"
               name="occupation"
               type="text"
               placeholder="О себе"
