--- a/index.html
+++ b/index.html
@@ -216,13 +216,9 @@
     <template class="cards__item-template">
       <li class="cards__item">
         <button class="cards__trash" aria-label="Удалить фото"></button>
-        <img
-          class="cards__image"
-          src="./images/karachaevsk.jpg"
-          alt="Старинный монастырь в Карачаевске"
-        />
+        <img class="cards__image" src="#" alt="#" />
         <div class="cards__description">
-          <h2 class="cards__title">Карачаевск</h2>
+          <h2 class="cards__title"></h2>
           <button
             class="cards__like"
             aria-label="Лайкнуть фото"
