feat: image preview popup

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             type="button"
             aria-label="Закрыть попап"
           ></button>
-          <img src="./images/karachaevsk.jpg" alt="" />
-          <figcaption class="popup__image-title">Карачаевск</figcaption>
+          <img class="popup__image" src="./images/karachaevsk.jpg" alt="" />
+          <figcaption class="popup__image-title"></figcaption>
         </figure>
       </div>
     </div>
