--- a/index.html
+++ b/index.html
@@ -40,97 +40,7 @@
         </section>
         <section class="cards">
           <ul class="cards__list">
-            <!-- <li class="cards__item">
-              <button class="cards__trash" aria-label="Удалить фото"></button>
-              <img
-                class="cards__image"
-                src="./images/karachaevsk.jpg"
-                alt="Старинный монастырь в Карачаевске"
-              />
-              <div class="cards__description">
-                <h2 class="cards__title">Карачаевск</h2>
-                <button
-                  class="cards__like"
-                  aria-label="Лайкнуть фото"
-                  type="button"
-                ></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                class="cards__image"
-                src="./images/elbrus.jpg"
-                alt="гора Эльбрус"
-              />
-              <div class="cards__description">
-                <h2 class="cards__title">Гора Эльбрус</h2>
-                <button
-                  class="cards__like"
-                  aria-label="Лайкнуть фото"
-                  type="button"
-                ></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                class="cards__image"
-                src="./images/dombai.jpg"
-                alt="горы Домбая"
-              />
-              <div class="cards__description">
-                <h2 class="cards__title">Домбай</h2>
-                <button
-                  class="cards__like"
-                  aria-label="Лайкнуть фото"
-                  type="button"
-                ></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                class="cards__image"
-                src="./images/karachaevsk.jpg"
-                alt="Старинный монастырь в Карачаевске"
-              />
-              <div class="cards__description">
-                <h2 class="cards__title">Карачаевск</h2>
-                <button
-                  class="cards__like"
-                  aria-label="Лайкнуть фото"
-                  type="button"
-                ></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                class="cards__image"
-                src="./images/elbrus.jpg"
-                alt="гора Эльбрус"
-              />
-              <div class="cards__description">
-                <h2 class="cards__title">Гора Эльбрус</h2>
-                <button
-                  class="cards__like"
-                  aria-label="Лайкнуть фото"
-                  type="button"
-                ></button>
-              </div>
-            </li>
-            <li class="cards__item">
-              <img
-                class="cards__image"
-                src="./images/dombai.jpg"
-                alt="горы Домбая"
-              />
-              <div class="cards__description">
-                <h2 class="cards__title">Домбай</h2>
-                <button
-                  class="cards__like"
-                  aria-label="Лайкнуть фото"
-                  type="button"
-                ></button>
-              </div>
-            </li> -->
+            <!-- JavaScript Template list -->
           </ul>
         </section>
       </main>
@@ -148,6 +58,7 @@
           <form
             class="popup__form popup__form_type_edit-profile"
             name="editProfilePopupForm"
+            method="POST"
           >
             <input
               class="popup__input popup__input_type_name"
@@ -183,6 +94,7 @@
           <form
             class="popup__form popup__form_type_add-img"
             name="editProfilePopupForm"
+            method="POST"
           >
             <input
               class="popup__input popup__input_type_image-title"
