refactor: like eventlistener moved on gallery out of card

--- a/index.html
+++ b/index.html
@@ -149,5 +149,6 @@
 
     <script src="./js/cards.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/validate.js"></script>
   </body>
 </html>
