--- a/index.html
+++ b/index.html
@@ -59,19 +59,30 @@
             class="popup__form popup__form_type_edit-profile"
             name="editProfilePopupForm"
             method="POST"
+            novalidate
           >
             <input
               class="popup__input popup__input_type_name"
+              id="name-input"
               name="name"
               type="text"
               placeholder="Имя"
+              minlength="2"
+              maxlength="40"
+              required
             />
+            <span class="popup__input-error-msg name-input-error"></span>
             <input
               class="popup__input popup__input_type_occupation"
+              id="occupation-input"
               name="occupation"
               type="text"
               placeholder="О себе"
+              minlength="2"
+              maxlength="200"
+              required
             />
+            <span class="popup__input-error-msg occupation-input-error"></span>
             <button
               class="popup__submit-btn"
               type="submit"
