--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
             />
             <span class="popup__input-error-msg occupation-input-error"></span>
             <button
-              class="popup__submit-btn"
+              class="popup__submit-btn popup__submit-btn_inactive"
               type="submit"
               aria-label="Сохранить изменения"
+              disabled
             >
               Сохранить
             </button>
