fix: html submit disabled

--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
             />
             <span class="popup__input-error-msg occupation-input-error"></span>
             <button
-              class="popup__submit-btn popup__submit-btn_inactive"
+              class="popup__submit-btn"
               type="submit"
               aria-label="Сохранить изменения"
-              disabled
             >
               Сохранить
             </button>
