--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h2 class="popup__title">Редактировать профиль</h2>
           <form
             class="popup__form popup__form_type_edit-profile"
-            name="editProfilePopupForm"
+            name="editProfileFormPopup"
             method="POST"
             novalidate
           >
@@ -104,7 +104,7 @@
           <h2 class="popup__title">Новое место</h2>
           <form
             class="popup__form popup__form_type_add-img"
-            name="editProfilePopupForm"
+            name="addImageFormPopup"
             method="POST"
           >
             <input
