--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 
     <script src="./js/cards.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/index2.js"></script>
     <script src="./js/validate.js"></script>
   </body>
 </html>
