--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
         <button class="cards__trash" aria-label="Удалить фото"></button>
         <img class="cards__image" src="#" alt="#" />
         <div class="cards__description">
-          <h2 class="cards__title"></h2>
+          <h2 class="cards__title">
+            <!-- The image title will go here with JS -->
+          </h2>
           <button
             class="cards__like"
             aria-label="Лайкнуть фото"
@@ -168,7 +170,8 @@
 
     <script src="./js/cards.js"></script>
     <script src="./js/index.js"></script>
-    <script src="./js/index2.js"></script>
+    <script src="./js/Card.js"></script>
+    <!-- <script src="./js/index2.js"></script> -->
     <script src="./js/validate.js"></script>
   </body>
 </html>
