--- a/index.html
+++ b/index.html
@@ -168,10 +168,9 @@
       </li>
     </template>
 
-    <script src="./js/cards.js"></script>
-    <script src="./js/index.js"></script>
-    <script src="./js/Card.js"></script>
-    <!-- <script src="./js/index2.js"></script> -->
+    <script type="module" src="./js/index.js"></script>
+    <!-- <script type="nomodule" src="./js/index2.js"></script> -->
+    <!-- сюда я пока скопировал весь старый код до изменений в ПР7 -->
     <script src="./js/validate.js"></script>
   </body>
 </html>
