refactor: delete extra code

--- a/index.html
+++ b/index.html
@@ -171,6 +171,6 @@
     <script type="module" src="./js/index.js"></script>
     <!-- <script type="nomodule" src="./js/index2.js"></script> -->
     <!-- сюда я пока скопировал весь старый код до изменений в ПР7 -->
-    <script src="./js/validate.js"></script>
+    <!-- <script src="./js/validate.js"></script> -->
   </body>
 </html>
