feat: Add Section class and render initial cards with it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <script type="module" src="./pages/index.js" defer></script>
     <title>Mesto</title>
   </head>
   <body class="root">
@@ -167,7 +168,5 @@
         </div>
       </li>
     </template>
-
-    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
