feat: add like counter markup

--- a/src/index.html
+++ b/src/index.html
@@ -159,11 +159,14 @@
           <h2 class="cards__title">
             <!-- The image title will go here with JS -->
           </h2>
-          <button
-            class="cards__like"
-            aria-label="Лайкнуть фото"
-            type="button"
-          ></button>
+          <div class="cards__like-container">
+            <button
+              class="cards__like"
+              aria-label="Лайкнуть фото"
+              type="button"
+            ></button>
+            <p class="cards__counter"></p>
+          </div>
         </div>
       </li>
     </template>
