feat: avatar markup and styles

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,13 @@
       </header>
       <main class="main">
         <section class="profile">
-          <img
-            class="profile__avatar"
-            src="<%=require('./images/avatar_jack_iv_kusto.jpg')%>"
-            alt="Аватарка пользователя"
-          />
+          <div class="profile__avatar-container">
+            <img
+              class="profile__avatar"
+              src="<%=require('./images/avatar_jack_iv_kusto.jpg')%>"
+              alt="Аватарка пользователя"
+            />
+          </div>
           <div class="profile__user-info">
             <h1 class="profile__user-name">Жак-Ив Кусто</h1>
             <button
