fix: remove extra comments

--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
             type="button"
             aria-label="Закрыть попап"
           ></button>
-          <img class="popup__image" src="./images/karachaevsk.jpg" alt="" />
+          <img class="popup__image" src="" alt="" />
           <figcaption class="popup__image-title"></figcaption>
         </figure>
       </div>
