fix: same ids in html

--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
             type="button"
             aria-label="Закрыть попап"
           ></button>
-          <img class="popup__image" src="" alt="" />
+          <img class="popup__image" src="#" alt="" />
           <figcaption class="popup__image-title"></figcaption>
         </figure>
       </div>
@@ -191,13 +191,13 @@
         >
           <input
             class="popup__input popup__input_type_avatar-url"
-            id="url-input"
+            id="avatar-url-input"
             name="avatar"
             type="url"
             placeholder="Ссылка на картинку"
             required
           />
-          <span class="popup__input-error-msg url-input-error"></span>
+          <span class="popup__input-error-msg avatar-url-input-error"></span>
           <button
             class="popup__submit-btn"
             type="submit"
